--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,9 @@ spring.mvc.view.suffix=.jsp
 spring.devtools.livereload.enabled=true
 
 spring.datasource.url=jdbc:oracle:thin:@127.0.0.1:1521:xe
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.username=tour
+spring.datasource.password=tour
 
-mybatis.type-aliases-package=com.my.tour.**.domain
+mybatis.type-aliases-package=com.my.tour.domain
 mybatis.configuration.map-underscore-to-camel-case=true
-mybatis.mapper-locations=classpath:com/my/tour/**/*.xml
+mybatis.mapper-locations=classpath:com/my/tour/dao/map/*.xml
