--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,8 @@ spring.datasource.url=jdbc:oracle:thin:@127.0.0.1:1521:xe
 spring.datasource.username=tour
 spring.datasource.password=tour
 
+attachPath=c:/DEV/attach
+
 mybatis.type-aliases-package=com.my.tour.domain
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.mapper-locations=classpath:com/my/tour/dao/map/*.xml
